--- a/homepage/style.css
+++ b/homepage/style.css
@@ -22,7 +22,7 @@ html {
 }
 
 .navbar-brand:hover {
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
 
 .nav-link {
@@ -34,7 +34,7 @@ html {
 
 .nav-link:hover, .nav-link:active {
   color: #FEF375;
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
 
 .navbar-toggler {
@@ -90,12 +90,11 @@ html {
 .card {
   border: 2px solid black;
   box-shadow: 6px 6px 0px black;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .card:hover {
-  transform: scale(1.05);
-  box-shadow: 9px 9px 0px black;
+  transform: scale(1.015);
 }
 
 h2 {
@@ -115,13 +114,13 @@ p {
   background-color: #00C5F1;
   border: 2px solid black;
   box-shadow: 4px 4px 0px black;
+  transition: transform 0.3s ease;
 }
 
 .page-btn:hover {
   background-color: #00cefd;
   border: 2px solid black;
-  box-shadow: 8px 8px 0px black;
-  transform: translate(-5px, -5px);
+  transform: scale(1.015);
 }
 
 .contact-btn {
@@ -129,14 +128,14 @@ p {
   background-color: #FEF375;
   border: 2px solid black;
   box-shadow: 4px 4px 0px black;
+  transition: transform 0.3s ease;
 }
 
 .contact-btn:hover {
   color: black;
   border: 2px solid black;
   background-color: #ecdf4e;
-  box-shadow: 8px 8px 0px black;
-  transform: translate(-5px, -5px);
+  transform: scale(1.015);
 }
 
 /* 404 */
@@ -145,23 +144,16 @@ p {
   font-size: 15.625rem;
   line-height: 0.85;
   color: #ED566A;
-  /* -webkit-text-stroke: 3px black; */
   text-shadow: 3px 6px 0px #FEF375, 6px 12px 0px #00C5F1;
 }
 
 .sub-404 {
   font-family: 'Mono45 Headline';
-  font-size: 4rem;
+  font-size: 3rem;
   line-height: 1;
 }
 
 /* MEDIA QUERIES */
-@media (max-width: 600px) {
-  p {
-    font-size: 1rem;
-  }
-}
-
 @media (max-width: 790px) {
   .heading-404 {
     font-size: 10rem;
@@ -172,5 +164,22 @@ p {
     font-size: 2rem;
     line-height: normal;
   }
+}
+
+@media (max-width: 600px) {
+  p, .page-btn {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 430px) {
+  .heading-404 {
+    font-size: 8rem;
+    line-height: 1;
+  }
   
+  .sub-404 {
+    font-size: 1.5rem;
+    line-height: normal;
+  }
 }
