--- a/homepage/style.css
+++ b/homepage/style.css
@@ -164,6 +164,10 @@ p {
     font-size: 2rem;
     line-height: normal;
   }
+
+  .display-4 {
+    text-shadow: 0px 5px 0px black;
+  }
 }
 
 @media (max-width: 600px) {
