--- a/homepage/style.css
+++ b/homepage/style.css
@@ -138,6 +138,10 @@ p {
   transform: scale(0.970);
 }
 
+.wow {
+  animation-duration: 0.75s;
+}
+
 /* 404 */
 .heading-404 {
   font-family: 'Zing Rust Base';
